test/errors/expressions_error/zs/index_operator/no_array_error.zs
package index_operator.no_array_error;

struct NoArrayError
{
    uint32 offsets[10];
offsets[@index]:
    int32 field;
};
